# market-research-agent

./: .gitignore  CLAUDE.md  casting.yaml
.github/: dependabot.yml
backend/: .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/src/agentdrops/: config.py  logging.py  main.py
backend/src/agentdrops/agents/: __init__.py  graph.py  llm.py  prompts.py  schemas.py  state.py  tools.py
backend/src/agentdrops/agents/research/: __init__.py  graph.py  methods.py
backend/src/agentdrops/agents/scope/: __init__.py  graph.py
backend/src/agentdrops/agents/supervisor/: __init__.py  graph.py
backend/src/agentdrops/agents/writer/: __init__.py  graph.py
backend/src/agentdrops/api/: __init__.py  main.py  schema.py  sessions.py
backend/src/agentdrops/api/v1/: __init__.py  chat.py  research.py  schema.py  sessions.py
backend/src/agentdrops/config/: __init__.py  constants.py  settings.py
backend/src/agentdrops/db/: __init__.py  engine.py  pool.py
backend/src/agentdrops/db/migrations/: env.py
backend/src/agentdrops/db/models/: __init__.py  audit_log.py  base.py  sessions.py
backend/src/agentdrops/observability/: logging.py  metrics.py  resource.py  setup.py  tracing.py
backend/src/agentdrops/repository/: __init__.py  audit.py  sessions.py
backend/src/agentdrops/resilience/: circuit_breaker.py  http_retry.py  llm_retry.py
backend/src/agentdrops/service/: __init__.py  chat_service.py  research_service.py  sessions_service.py
backend/src/agentdrops/types/: __init__.py  error_codes.py  response.py
backend/src/agentdrops/webtools/: __init__.py  base.py  exa.py  news.py  reddit.py  registry.py  tavily.py
backend/tests/unit/: test_config.py  test_logging.py  test_main.py  test_registry.py
backend/tests/unit/agents/: conftest.py  test_llm.py  test_tools.py
backend/tests/unit/agents/research/: test_graph.py  test_methods.py
backend/tests/unit/agents/scope/: test_graph.py
backend/tests/unit/agents/supervisor/: test_graph.py
backend/tests/unit/agents/writer/: test_graph.py
backend/tests/unit/api/: test_main.py
backend/tests/unit/api/v1/: conftest.py  test_chat.py  test_research.py  test_sessions.py
backend/tests/unit/db/: test_pool.py
backend/tests/unit/observability/: conftest.py  test_logging.py  test_metrics.py  test_tracing.py
backend/tests/unit/repository/: conftest.py  test_audit.py  test_sessions.py
backend/tests/unit/resilience/: test_circuit_breaker.py  test_http_retry.py  test_llm_retry.py
backend/tests/unit/webtools/: conftest.py  test_base.py  test_exa.py  test_news.py  test_reddit.py  test_tavily.py
frontend/: next.config.ts  (+2 more)
(+30 files in other folders)
