[project]
name = "agentdrops"
version = "0.1.0"
description = "Agentdrops deep research market agent backend"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "tenacity>=8.2",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pybreaker>=1.2",
    "structlog>=24.1",
    "tornado>=6.4",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentdrops"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = "respx.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
